; ModuleID = '/home/carl/AnghaBench/8cc/test/extr_struct.c_t9.c'
source_filename = "/home/carl/AnghaBench/8cc/test/extr_struct.c_t9.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tag9 = type { [3 x i32], [3 x i32] }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @t9 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @t9() #0 {
  %1 = alloca %struct.tag9, align 4
  %2 = getelementptr inbounds %struct.tag9, %struct.tag9* %1, i32 0, i32 0
  %3 = getelementptr inbounds [3 x i32], [3 x i32]* %2, i64 0, i64 0
  store i32 73, i32* %3, align 4
  %4 = getelementptr inbounds %struct.tag9, %struct.tag9* %1, i32 0, i32 0
  %5 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @expect(i32 73, i32 %6)
  %8 = getelementptr inbounds %struct.tag9, %struct.tag9* %1, i32 0, i32 1
  %9 = getelementptr inbounds [3 x i32], [3 x i32]* %8, i64 0, i64 1
  store i32 74, i32* %9, align 4
  %10 = getelementptr inbounds %struct.tag9, %struct.tag9* %1, i32 0, i32 1
  %11 = getelementptr inbounds [3 x i32], [3 x i32]* %10, i64 0, i64 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @expect(i32 74, i32 %12)
  %14 = getelementptr inbounds %struct.tag9, %struct.tag9* %1, i32 0, i32 0
  %15 = getelementptr inbounds [3 x i32], [3 x i32]* %14, i64 0, i64 4
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @expect(i32 74, i32 %16)
  ret void
}

declare dso_local i32 @expect(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
